--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def billing_version = "3.0.3"
     implementation "com.android.billingclient:billing:$billing_version"
     implementation 'androidx.appcompat:appcompat:1.3.0'
