--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
         applicationId "jkmdroid.toptier"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 6
-        versionName "1.5"
-
+        versionCode 10
+        versionName "2.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -30,15 +30,18 @@ android {
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    def billing_version = "3.0.3"
+    implementation 'com.google.firebase:firebase-ads:20.2.0'
+    def billing_version = "4.0.0"
     implementation "com.android.billingclient:billing:$billing_version"
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
-    implementation 'androidx.work:work-runtime:2.5.0'
+    implementation 'androidx.work:work-runtime:2.6.0-beta01'
     implementation 'com.android.volley:volley:1.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.github.joielechong:countrycodepicker:2.4.2'
+
+    implementation 'com.google.android.gms:play-services-ads-lite:20.2.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
